syntax = "proto3";

// protoc --proto_path=src/main/java/com/ljh/gamedemo/proto/ --java_out=src/main/java src/main/java/com/ljh/gamedemo/proto/Guild.proto

import "Role.proto";
import "GuildMember.proto";

option java_package = "com.ljh.gamedemo.proto.protoc";
option java_outer_classname = "GuildProto";

message Guild{
    int64 guildId = 1;          // 公会id
    string name = 2;            // 公会名
    string bulletin = 3;        // 公告
    int32 level = 4;            // 等级
    int32 num = 5;              // 人数
    int32 maxNum = 6;           // 最大人数值
    Role president = 7;         // 会长信息
    repeated GuildMember member = 8;        // 公会成员
}

